--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-  "version": "1.5.0",
-  "versionCode": 150,
+  "version": "2.0.0",
+  "versionCode": 200,
   "updateUrl": "https://raw.githubusercontent.com/pawanosman/kurdishrealrppublic/master/setup.exe",
   "backgroundImage": "https://raw.githubusercontent.com/pawanosman/kurdishrealrppublic/master/launcher_background.jpg",
-  "socketAddress": "https://www.kurdlabs.com:8443",
+  "socketAddress": "https://127.0.0.1:8443",
   "banMessage": {
 	"caption": "You are Banned!",
 	"message": "You are banned! your connection terminated"
